--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,13 @@
-
-  footer {
-    text-align: center;
-    padding: 3px;
-    background-color: #e0eef6;
-    color: rgb(8, 7, 7);
-  }
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: #e0eef6;
+  color: rgb(8, 7, 7);
+  position: fixed;
+  padding: 10px 10px 10px 10px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  
+}
